<resources>
    <string name="app_name">La Dispute</string>
    <string name="desc_social_ladispute">Website</string>
    <string name="desc_social_reddit">Subreddit</string>
    <string name="desc_social_facebook">Facebook</string>
    <string name="desc_social_lastfm">Last.fm</string>
    <string name="desc_social_twitter">Twitter</string>
    <string name="desc_social_googleplus">Google+</string>
    <string name="desc_social_youtube">Youtube</string>
    <string name="desc_play_button">Play This Selection</string>
    <string name="room_tour">Tour</string>
    <string name="room_music">Music</string>
    <string name="room_lyrics">Lyrics</string>
    <string name="room_store">Merch</string>
    <string name="room_extras">Fan Extras</string>
    <string name="room_wallpapers">Wallpapers</string>
    <string name="room_code">Open-Source Code</string>
    <string name="toast_nobrowser">I couldn\'t find a web browser installed.</string>
    <string name="toast_noweb">No Internet Access.</string>
    <string name="toast_nomusic">Google Play Music could not be found.</string>
    <string name="hint_zipcode">Zipcode</string>
    <string name="switch_notifications">Notifications</string>
    <string name="link_addme">I want to code!</string>
    <string name="url_officialsite">http://www.ladisputemusic.com/home/</string>
    <string name="url_googleplus">https://plus.google.com/116650799878170476461</string>
    <string name="url_youtube">https://www.youtube.com/channel/UCiPlac-xYG2AuSLh5JwYzzw</string>
    <string name="url_reddit">https://www.reddit.com/r/ladispute</string>
    <string name="url_facebook">https://www.facebook.com/LaDisputeMusic/</string>
    <string name="url_twitter">https://twitter.com/ladisputeband</string>
    <string name="url_lastfm">http://www.last.fm/music/La+Dispute</string>
    <string name="url_tourinfo">http://www.eventhorizonwebdesign.com/testing/ladispute/tour.html</string>
    <string name="url_store_europe">http://ladispute.awesomedistro.com/</string>
    <string name="url_store_asia">http://shop.resistrecords.com/collections/la-dispute</string>
    <string name="url_store_america">http://hellomerch.com/collections/la-dispute</string>
    <string name="url_wallpapers">https://goo.gl/photos/QRe8abh2iF6NRMVc9</string>
    <string name="url_repo">https://source.developers.google.com/p/la-dispute/</string>
    <string name="blank"> </string>
    <string name="title_activity_tour">Tour Dates</string>
    <string name="title_activity_lyric_sorter">Lyrics</string>
    <string name="action_settings">Settings</string>
    <string name="section_songs">Song Title</string>
    <string name="section_album">Album Title</string>
    <string name="title_activity_lyric">Lyrics</string>
    <string name="title_activity_music_main">Music</string>
    <string name="title_activity_music_album">Album</string>
    <string name="title_activity_extras_main">Extras</string>
</resources>
