<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.eventhorizonwebdesign.ladispute.TourActivity"
    android:background="@color/colorPrimary"
    android:clickable="false">

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/toolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toolbar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:id="@+id/dropShadow"
        android:minHeight="8dp"
        android:src="@drawable/drop_shadow"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/blank" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dropShadow"
        android:background="@drawable/rooms_of_the_house_bg"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/rooms">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_wallpapers"
            android:id="@+id/wallpapers"
            android:background="@drawable/rooms_of_the_house_bg"
            android:textColor="@color/white"
            android:textSize="12pt"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_code"
            android:id="@+id/code"
            android:layout_below="@+id/wallpapers"
            android:background="@drawable/rooms_of_the_house_bg"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textSize="12pt"
            android:textStyle="bold"
            android:layout_alignRight="@+id/wallpapers"
            android:layout_alignEnd="@+id/wallpapers"
            android:layout_alignLeft="@+id/wallpapers"
            android:layout_alignStart="@+id/wallpapers" />
    </RelativeLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_notifications"
        android:id="@+id/notificationsSwitch"
        android:layout_below="@+id/rooms"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="12pt"
        android:textStyle="bold"
        android:layout_alignRight="@+id/zipcode"
        android:layout_alignEnd="@+id/zipcode"
        android:layout_alignLeft="@+id/zipcode"
        android:layout_alignStart="@+id/zipcode" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/zipcode"
        android:layout_below="@+id/notificationsSwitch"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_zipcode"
        android:textColor="@color/white"
        android:textSize="12pt"
        android:textStyle="bold"
        android:textColorHint="@color/colorAccent" />

</RelativeLayout>
